1. Устанвоил 1 LinearLayout; 2. Заменил camelCase на snake_case; 3. Добавил подсказки к EditText

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Подписка</string>
-    <string name="title">Подписка</string>
     <string name="user_name">Имя пользователя</string>
-    <string name="txtEmail">Электронная почта</string>
+    <string name="txt_email">Электронная почта</string>
     <string name="txt_btn_ok">ОК</string>
     <string name="txt_btn_clear">Очистить</string>
     <string name="user_name_input_example">Елена</string>
